--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,8 @@
 nav {
-    background-color: rgb(127,255,280);
+    background-color: rgb(22, 181, 255);
+    position:fixed;
+    width:100vw;
+    top:0;
 }
 
 ul li {
