--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -5,6 +5,15 @@ div.intro {
     align-items: center;
 }
 
+div.projects >div  {
+    padding: 10px;
+    margin:10px 10px 10px 20px;
+    width:50vw;
+    height:250px;
+}
+
+
+
 
 
 .card1 {
@@ -32,10 +41,6 @@ div.intro {
 .card2:hover {
     background-color: rgb(205,133,63,0.9);/*rgb205, 133,63*/
     color:wheat;
-}
-
-.card2:hover img{
-    transform: scale(1.8);
 }
 .card3 {
     background-color: rgb(216,112,147,0.5);/*rgb216,112,147*/
@@ -96,8 +101,8 @@ div.intro {
 }
 
 img.screenshot {
-    max-width:150px;
-    max-height:200px;
+    max-width:100%;
+    max-height:80%;
 }
 
 @media screen and (min-width: 700px){
@@ -108,13 +113,15 @@ img.screenshot {
         align-items: center;
         justify-content: left;
         border:1px solid paleturquoise;
-        margin:0px 100px
+        width:95vw;
     }
     div.projects >div  {
-        padding: 10px;
-        margin:10px 0.2vw 10px 20px;
-        width:20vw;
+        padding: 1px;
+        width:90%;
         height:280px;
+        word-wrap: normal;
+        white-space: pre-wrap;
+
     }
 
 }
