Added netlify.toml config

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -2,6 +2,10 @@ img.mypic {
     max-width:250px;
     max-height: 300px;
 }
+div#about {
+    position: relative;
+    top: 100px;
+}
 
 div.tech {
     display:flex;
