--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -10,6 +10,7 @@ div.projects >div  {
     margin:10px 10px 10px 20px;
     width:50vw;
     height:250px;
+    overflow: hidden;
 }
 
 
@@ -102,7 +103,8 @@ div.projects >div  {
 
 img.screenshot {
     max-width:100%;
-    max-height:80%;
+    max-height:150px;
+   
 }
 
 @media screen and (min-width: 700px){
@@ -122,6 +124,10 @@ img.screenshot {
         word-wrap: normal;
         white-space: pre-wrap;
 
+    }
+    img.screenshot {
+        max-width:100%;
+        max-height:50%;
     }
 
 }
