--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,11 +1,59 @@
 nav {
-    background-color: rgb(22, 181, 255);
+    background-color: rgb(9, 99, 141,0.4);
     position:fixed;
     width:100vw;
     top:0;
     z-index: 1;
 }
-
-ul li {
+.navbar-links  {
+    display:flex;
+    flex-direction: column;
+   
+}
+.navbar-links li {
     list-style-type: none;
+    margin-top:30px;
+    margin-right:100px;
+    margin-bottom: 30px;
+}
+
+.navbar-links  li a {
+    position: fixed;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: 2s;
+    
+}
+
+.hamburger.active {
+    display: block;
+}
+@media screen and (min-width: 550px){
+    .navbar-links  {
+        display:flex;
+        flex-direction: row;
+       
+    }
+    .navbar-links li {
+        list-style-type: none;
+        margin-top:20px;
+        margin-right:30px;
+        margin-left:100px;
+        margin-bottom: 30px;
+    }
+    .navbar-links li a {
+        position: fixed;
+        text-transform: uppercase;
+        text-decoration: none;
+        transition: 2s;
+        
+    }
+    .close {
+        display:none;
+    }
+    .hamburger {
+        display: none;
+    }
+    
+
 }
