--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -22,6 +22,9 @@ div.projects >div  {
 
 
 .card1 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(127,255,212,0.3); /*rgb127,255,212*/
     border:1px solid black;
     transition: all .5s;
@@ -30,12 +33,15 @@ div.projects >div  {
 }
 .card1:hover {
     background-color: rgb(127,255,212,0.9); /*rgb127,255,212*/
-    color:rgb(42, 168, 241);
+    color:white;
     z-index: 1;
 
 }
 
 .card2 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(205,133,63,0.3);/*rgb205, 133,63*/
     border:1px solid black;
     transition: all 1s;
@@ -48,6 +54,9 @@ div.projects >div  {
     color:wheat;
 }
 .card3 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(216,112,147,0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
@@ -58,6 +67,9 @@ div.projects >div  {
 }
 
 .card4 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(63, 95, 237, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
@@ -68,6 +80,9 @@ div.projects >div  {
 }
 
 .card5 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(82, 56, 169, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
@@ -78,6 +93,9 @@ div.projects >div  {
 }
 
 .card6 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(17, 237, 212, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
@@ -87,6 +105,9 @@ div.projects >div  {
     clip-path: circle(300px);
 }
 .card7 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(237, 233, 17, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
@@ -96,6 +117,9 @@ div.projects >div  {
     clip-path: circle(300px);
 }
 .card8 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgba(237, 17, 208, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     transition: all 1s;
