--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #bac4e5;
+  background-color: #d2e3e9;
   
 }
 
