--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
 .App {
   text-align: center;
 }
