Added repo tracker code instead of deploying separately

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,12 @@
 
 
-
+div#about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin:20px
+}
 
 div.mypic {
     border:1px solid black;
