--- a/src/components/home.css
+++ b/src/components/home.css
@@ -21,6 +21,16 @@ div.typingeff h1{
     font-family: 'monospace';
     color:white;
 }
+div.typingeff h1::after{
+    font-family: 'monospace';
+    position: relative;
+    color:white;
+    content:'|';
+    animation-name:blink;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
 #aboutme h2{
     margin:20px;
 }
@@ -144,10 +154,16 @@ div.futuretech {
     }
   
   }
-  @keyframes blink {
-    50% {
-      border-color: transparent ;
+@keyframes blink {
+    0% {
+        color:white;
     }
+    50% {
+      color:black;
+    }
+    100% {
+        color:white;
+      }
   }
     
 
