--- a/src/components/home.css
+++ b/src/components/home.css
@@ -15,7 +15,12 @@ div.mypic {
 }
 
 div.typingeff {
+    position: relative;
+    padding: 10px;
     background-color: black;
+    margin-bottom: 60px;
+    height:100px;
+    width:80%;
 }
 div.typingeff h1{
     font-family: 'monospace';
@@ -105,6 +110,12 @@ div.futuretech {
         justify-content: space-around;
         margin:60px
     }
+    div.typingeff {
+        position: relative;
+        background-color: black;
+        width:40%;
+       
+    }
     div.mypic {
         width: auto;
         height:350px;
@@ -148,12 +159,7 @@ div.futuretech {
 }
 
 
-@keyframes typing {
-    from {
-      width: 0
-    }
-  
-  }
+
 @keyframes blink {
     0% {
         color:white;
