--- a/src/components/home.css
+++ b/src/components/home.css
@@ -80,8 +80,7 @@ div.currenttech {
 .currenttech ul {
     list-style-type:none;
     display:grid;
-    grid-template-rows:30% 30% 30%;
-    
+    grid-template-rows: auto auto;
 }
 
 
