--- a/src/components/description.css
+++ b/src/components/description.css
@@ -4,6 +4,7 @@
 
 .description {
     display:flex;
+    margin-top: 80px;
     padding:10px;
     flex-direction: column;
     align-items: center;
@@ -16,8 +17,15 @@ div.grid img {
     max-width:90%;
     max-height:70%;
     padding-top:20px;
-
 }
+#show {
+    display: block;
+    position: relative;
+    transition: all 0.2s;
+    top:0px;
+}
+
+
 
 
 
