--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Press+Start+2P&family=Roboto&family=Thasadith&display=swap');
 
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Thasadith', serif;
 }
 .App {
   text-align: center;
