--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -5,6 +5,8 @@ div.intro {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border:2px solid black;
+    
 }
 
 div.projects2 {
@@ -71,7 +73,7 @@ div.projects >div  {
     display:flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(63, 95, 237, 0.2);/*rgb216,112,147*/
+    background-color: rgba(63, 95, 237, 0.5);/*rgb216,112,147*/
     border:1px solid black;
     border-radius: 10px;
     transition: all .3s;
