--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -1,4 +1,4 @@
-div.intro {
+div.main {
     position: relative;
     top:100px;
     display: flex;
@@ -69,7 +69,7 @@ div.projects >div  {
     clip-path: circle(300px);
 }
 
-.card4 {
+.pcard4 {
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -81,7 +81,7 @@ div.projects >div  {
     -webkit-box-shadow: 12px 9px 8px -2px #000000; 
     box-shadow: 12px 9px 8px -20px #000000;
 }
-.card4:hover {
+.pcard4:hover {
     background-color: rgba(63, 95, 237, 0.9);/*rgb216,112,147*/
     color:white;
     border: 2px solid black;
