sorted errors with navbar

--- a/src/components/jonespalmer/src/components/Navbar.css
+++ b/src/components/jonespalmer/src/components/Navbar.css
@@ -62,10 +62,16 @@
     color: #fff;
     font-size: 40px;
     margin: 100px 0 0 40vw;
+    display:flex;
+    flex-direction: column;
+    justify-content: left;
+    position: relative;
+    left:-100px;
   }
   #jpnavbar ul li  {
     list-style: none;
     padding:400px 0 20 30vw;
+    
   }
 
   
@@ -75,6 +81,7 @@
     /*font-size:10px;*/
     text-decoration: none;
     transition: 2s;
+    color: white;
     
     
   }
@@ -126,6 +133,8 @@
       font-size: 20px;
       margin: 0px 0 0 10vw;
       display: flex;
+      display:flex;
+      flex-direction: row;
     }
     
     #jpnavbar ul li {
