Added crypto chart to my portfolio

--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -6,7 +6,7 @@ div.main {
     justify-content: center;
     align-items: center;
     border:2px solid black;
-    
+    padding:10px;
 }
 
 div.projects2 {
