--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -1,31 +1,16 @@
-div.main {
-    position: relative;
-    top:100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border:2px solid black;
-    padding:10px;
-}
 
 div.projects2 {
-    background-color:rgb(127,255,212,0.3);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-div.projects >div  {
-    padding: 10px;
-    margin:10px 10px 10px 20px;
-    width:50vw;
-    height:250px;
-    overflow: hidden;
+h1#projects {
+    margin: 20px;
+    color:rgba(17, 237, 212, 0.8);
 }
 
-
-
-
-
-.card1 {
+.pcard1 {
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -35,13 +20,13 @@ div.projects >div  {
     
     
 }
-.card1:hover {
+.pcard1:hover {
     background-color: rgb(127,255,212,0.9); /*rgb127,255,212*/
     color:white;
 
 }
 
-.card2 {
+.pcard2 {
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -52,11 +37,11 @@ div.projects >div  {
     
 
 }
-.card2:hover {
+.pcard2:hover {
     background-color: rgb(205,133,63,0.9);/*rgb205, 133,63*/
     color:wheat;
 }
-.card3 {
+.pcard3 {
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +49,7 @@ div.projects >div  {
     border:1px solid black;
     transition: all 1s;
 }
-.card3:hover {
+.pcard3:hover {
     background-color: rgb(216,112,147,0.9);/*rgb216,112,147*/
     clip-path: circle(300px);
 }
@@ -89,7 +74,7 @@ div.projects >div  {
     box-shadow: 30px 9px 8px -2px #000000;
 }
 
-.card5 {
+.pcard5 {
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -97,7 +82,7 @@ div.projects >div  {
     border:1px solid black;
     transition: all 1s;
 }
-.card5:hover {
+.pcard5:hover {
     background-color: rgba(82, 56, 169, 0.9);/*rgb216,112,147*/
     clip-path: circle(300px);
 }
@@ -152,28 +137,22 @@ img.screenshot {
 }
 
 @media screen and (min-width: 700px){
-
-    div.projects{
-        display: grid;
-        grid-template-columns: 24% 24% 24% 24% ;
-        align-items: center;
-        justify-content: left;
-        width:95vw;
+    
+    div.projects2 {
+        display:grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: auto;
+        width: 100%;
     }
-    div.projects >div  {
-        padding: 1px;
-        width:90%;
-        height:280px;
-        word-wrap: normal;
-        white-space: pre-wrap;
-        -webkit-box-shadow: 9px 9px 8px -2px #000000; 
-        box-shadow: 9px 9px 8px -2px #000000;
-
-    }
+    
     img.screenshot {
         max-width:100%;
         max-height:50%;
     }
 
+    h1#projects {
+        padding-left: 30vw;
+        color:rgba(17, 237, 212, 0.8);
+    }
 }
 
